# osm_mo_casus

./: README.md
diagrams/: README.md
diagrams/plantuml/use_case/: use_case_crud.puml  use_case_diagram.puml  use_case_gebruik.puml
docs/: README.md
docs/additional/: TODO.md  raw_requirements.md  requirements.md  vragen.md
docs/design_documents/: software_design_description.md  software_requirements_specification.md
src/: CMakeLists.txt  README.md
src/src/: main.cpp
